# aws_network_shell

./: .commitlintrc.yaml  .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  config.json  pyproject.toml  test_resources.json.final  validate_issues.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yaml  dependabot.yml
docs/: ARCHITECTURE.md  README.md  command-hierarchy-graph.md  command-hierarchy-split.md
scripts/: AUTOMATION_README.md  README.md  automated_issue_resolver.py  clean-output-for-git.sh  clean-output.py  fetch_issues.py  issue_investigator.py  issue_tests.yaml  run_issue_tests.py  s2svpn  shell_runner.py
tests/: AGENT_TEST_PLAN.md  GRAPH_BASED_TEST_STRATEGY.md  README.md  agent_test_runner.py  capture_baselines.sh  generate_report.py  interactive_routing_cache_test.py  test_cloudwan_branch.py  test_cloudwan_handlers.py  test_cloudwan_issue3.py  test_cloudwan_issues.py  test_ec2_context.py  test_elb_handler.py  test_elb_module.py  test_graph_commands.py  test_issue_2_show_detail.py  test_issue_5_tgw_rt_details.py  test_issue_8_vpc_set.py  test_policy_change_events.py  test_refresh_command.py  test_shell_hierarchy.py  test_show_regions.py  test_tgw_issues.py  test_validators.py  test_vpn_tunnels.py
tests/fixtures/: README.md  __init__.py  client_vpn.py  cloudwan.py  cloudwan_connect.py  command_fixtures.py  ec2.py  elb.py  firewall.py  fixture_generator.py  gateways.py  global_accelerator.py  global_network.py  peering.py  prefix_lists.py  route53_resolver.py  (+4 more)
themes/: catppuccin-latte.json  catppuccin-macchiato.json  catppuccin-mocha-vibrant.json  catppuccin-mocha.json  dracula.json
(+60 files in other folders)
